--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -24,6 +24,8 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.0.3",
+    "@nestjs/platform-ws": "^10.0.3",
+    "@nestjs/websockets": "^10.0.3",
     "@prisma/client": "^4.16.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -36,6 +38,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
+    "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
