--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -28,7 +28,8 @@
     "@nestjs/websockets": "^10.0.3",
     "@prisma/client": "^4.16.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.27.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -39,6 +40,7 @@
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@types/ws": "^8.5.5",
+    "@types/uws": "^0.13.3",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
