--- a/backend/nestjs/package.json
+++ b/backend/nestjs/package.json
@@ -20,15 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/static": "^6.10.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.0.3",
-    "@nestjs/platform-ws": "^10.0.3",
+    "@nestjs/swagger": "^7.1.1",
     "@nestjs/websockets": "^10.0.3",
     "@prisma/client": "^4.16.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "prisma": "^4.16.0",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.27.0"
   },
   "devDependencies": {
@@ -39,19 +40,17 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
-    "@types/ws": "^8.5.5",
     "@types/uws": "^0.13.3",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
+    "jest": "^25.0.0",
     "prettier": "^2.8.8",
-    "prisma": "^4.16.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^27.0.3",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
