--- a/backend/nestjs/package.json
+++ b/backend/nestjs/package.json
@@ -15,6 +15,7 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
+    "@fastify/multipart": "^7.7.2",
     "@fastify/static": "^6.10.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
@@ -22,9 +23,11 @@
     "@nestjs/swagger": "^7.1.1",
     "@nestjs/websockets": "^10.0.3",
     "@prisma/client": "^4.16.0",
+    "dotenv": "^16.3.1",
+    "minio": "^7.1.1",
+    "prisma": "^4.16.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "prisma": "^4.16.0",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.27.0"
   },
   "devDependencies": {
