--- a/backend/nestjs/package.json
+++ b/backend/nestjs/package.json
@@ -19,10 +19,13 @@
     "@fastify/static": "^6.10.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.1.0",
     "@nestjs/platform-fastify": "^10.0.3",
     "@nestjs/swagger": "^7.1.1",
     "@nestjs/websockets": "^10.0.3",
     "@prisma/client": "^4.16.0",
+    "amqp-connection-manager": "^4.1.13",
+    "amqplib": "^0.10.3",
     "dotenv": "^16.3.1",
     "minio": "^7.1.1",
     "prisma": "^4.16.0",
