add go: resize and upload image

--- a/backend/go/.env
+++ b/backend/go/.env
@@ -3,3 +3,6 @@ DB_PORT=5432
 DB_USER=adm1n
 DB_NAME=playground
 DB_PASSWORD=Passw0rd
+MINIO_HOST=localhost:9000
+MINIO_LOGIN=adm1n
+MINIO_PASSWORD=Passw0rd
