add rabbitmq and image transform

--- a/backend/go/.env
+++ b/backend/go/.env
@@ -6,3 +6,4 @@ DB_PASSWORD=Passw0rd
 MINIO_HOST=localhost:9000
 MINIO_LOGIN=adm1n
 MINIO_PASSWORD=Passw0rd
+RABBIT_MQ_HOST=amqp://guest:guest@localhost:5672/
