--- a/database/minio/docker-compose.yml
+++ b/database/minio/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     environment:
       MINIO_ROOT_USER: adm1n
       MINIO_ROOT_PASSWORD: Passw0rd
+      MINIO_DOMAIN: example.com
     command: server /data
 
 volumes:
